--- a/charity_water_landing_page.html
+++ b/charity_water_landing_page.html
@@ -50,7 +50,7 @@
     }
 
     .logo img {
-  height: 20px; /* or adjust as needed */
+  height: 17px; /* or adjust as needed */
   width: auto;  /* keeps the aspect ratio */
   display: block;
 }
@@ -70,6 +70,7 @@
       font-size: 1.1em;
       line-height: 1.6;
       color: #fff7e1;
+      margin-bottom: 32px; /* Add or increase this value */
     }
 
     .cta-button {
