Implement code changes to enhance functionality and improve performance

--- a/charity_water_landing_page.html
+++ b/charity_water_landing_page.html
@@ -6,12 +6,11 @@
   <title>Charity: Water Landing Page</title>
   <style>
     body {
-  margin: 0;
-  font-family: 'Proxima Nova', Arial, sans-serif;
-  background-color: #22507a; /* Use the sampled blue */
-  color: #fff7e1;
-}
-
+      margin: 0;
+      font-family: 'Proxima Nova', Arial, sans-serif;
+      background-color: #22507a; /* Use the sampled blue */
+      color: #fff7e1;
+    }
 
     .container {
       position: relative;
@@ -20,7 +19,7 @@
       align-items: right;
       justify-content: flex-start;
       min-height: 100vh;
-      background-image:url('hero.jpg'); /* Replace with actual hero image */
+      background-image: url('hero.png'); /* Updated to use hero.png */
       background-size: 80%;
       background-position: right;
       background-repeat: no-repeat;
@@ -50,7 +49,7 @@
     }
 
     .logo img {
-  height: 17px; /* or adjust as needed */
+  height: 19px; /* or adjust as needed */
   width: auto;  /* keeps the aspect ratio */
   display: block;
 }
@@ -63,14 +62,14 @@
     .subheading {
       color: #77a8bb;
       font-size: .98em;
-      margin-bottom: 2em;
+      margin-bottom: 3.5em;
     }
 
     .body-text {
       font-size: 1.1em;
       line-height: 1.6;
       color: #fff7e1;
-      margin-bottom: 32px; /* Add or increase this value */
+      margin-bottom: 100px; /* Add or increase this value */
     }
 
     .cta-button {
@@ -107,6 +106,17 @@
   color: #fff7e1;
 }
 
+.thank-you-message {
+    color: #003366;
+    font-size: 1.3em;
+    font-family: 'Proxima Nova', Arial, sans-serif;
+    padding: 8px 0;
+    text-align: center;
+    width: 100%;
+    font-weight: normal;
+    letter-spacing: 1px;
+}
+
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
@@ -125,21 +135,59 @@
   <img src="charity_water_logo.png" alt="Charity Water logo">
       </div>
       <h1>Change a Life Today —<br>Create Waves for Tomorrow</h1>
-      <p class="subheading">Hear their stories, see the impact you make, and <strong>help bring clean water</strong> to communities around the world—one drop at a time.</p>
+      <p class="subheading">Hear their stories, see the impact you make, and help bring clean water to communities around the world—one drop at a time.</p>
       <p class="body-text">
         At Charity: Water, we build lasting water systems—like wells, tap stands, and piped networks—and use real-time sensors to ensure every community has reliable, ongoing access to clean water. 
         With full transparency and inspiring stories from the people you’re helping, you’ll see exactly how your monthly gift makes a difference:
-        <br><br>
-        <strong>$10 gives 3 people clean water for a year,</strong><br>
-        <strong>$20 helps 6</strong>—and as your support grows, so does your impact.
+        
+        $10 gives 3 people clean water for a year,
+        $20 helps 6—as your support grows, so does your impact.
       </p>
-      <div class="cta-bar">
-  <div class="cta-button">
-    <a href="#">Join us</a>
+      <div class="cta-bar" id="cta-bar">
+  <div class="cta-button" id="cta-button">
+    <a href="#" id="cta-btn">Join us</a>
   </div>
 </div>
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <script>
+  function handleCtaClick(e) {
+    e.preventDefault();
+    // Confetti bursts
+    confetti({
+      particleCount: 200,
+      spread: 90,
+      origin: { y: 0.7 }
+    });
+    setTimeout(function() {
+      confetti({
+        particleCount: 150,
+        spread: 120,
+        origin: { y: 0.6 }
+      });
+    }, 200);
+
+    // Replace button with centered thank you message
+    ctaBar.innerHTML = '<div class="thank-you-message">Thank you!</div>';
+    ctaBar.style.justifyContent = 'center';
+
+    // After 2 seconds, switch back to the Join us button
+    setTimeout(function() {
+      ctaBar.innerHTML = `
+        <div class="cta-button" id="cta-button">
+          <a href="#" id="cta-btn">Join us</a>
+        </div>
+      `;
+      ctaBar.style.justifyContent = 'flex-end';
+      // Re-attach the event listener to the new button
+      document.getElementById('cta-btn').addEventListener('click', handleCtaClick);
+    }, 10000);
+  }
+
+  const ctaBar = document.getElementById('cta-bar');
+  document.getElementById('cta-btn').addEventListener('click', handleCtaClick);
+</script>
 </body>
 </html>
