--- a/charity_water_landing_page.html
+++ b/charity_water_landing_page.html
@@ -117,14 +117,68 @@
     letter-spacing: 1px;
 }
 
-    @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 30px 20px;
-        background-position: center;
-      }
-    }
+/* Add or update your existing media query for responsiveness */
+@media (max-width: 1024px) {
+  .container {
+    padding: 40px 16px;
+    background-size: 100%;
+    background-position: center right;
+  }
+  .text-content {
+    max-width: 90vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px 8px;
+    background-size: cover;
+    background-position: center;
+    min-height: unset;
+  }
+  .text-content {
+    max-width: 100vw;
+    margin-top: 0;
+    text-align: left;
+  }
+  .logo img {
+    height: 16px;
+  }
+  h1 {
+    font-size: 1.5em;
+  }
+  .body-text {
+    font-size: 1em;
+    margin-bottom: 32px;
+  }
+  .cta-bar {
+    width: 100%;
+    justify-content: center;
+    margin-top: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 8px 2vw;
+  }
+  .logo img {
+    height: 12px;
+  }
+  h1 {
+    font-size: 1.1em;
+  }
+  .cta-bar {
+    padding: 4px 2px;
+    border-radius: 3px;
+  }
+  .cta-button a {
+    padding: 8px 12px;
+    font-size: 0.95em;
+  }
+}
   </style>
 </head>
 <body>
