--- a/charity_water_landing_page.html
+++ b/charity_water_landing_page.html
@@ -120,12 +120,42 @@
 /* Add or update your existing media query for responsiveness */
 @media (max-width: 1024px) {
   .container {
-    padding: 40px 16px;
-    background-size: 100%;
-    background-position: center right;
+    position: relative;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0;
+    min-height: 100vh;
+    background: none;
+  }
+  .custom-bg-half {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 50vh;
+    background: 
+      linear-gradient(to bottom, rgba(0,51,102,0.5), #003366 100%),
+      url('Ipad_and_phone_hero.jpg') center top no-repeat;
+    background-size: contain;
+    z-index: 0;
+  }
+  .custom-bg-bottom {
+    position: absolute;
+    top: 50vh; left: 0;
+    width: 100%;
+    height: 50vh;
+    background: #003366;
+    z-index: 0;
+  }
+  .overlay {
+    display: none;
   }
   .text-content {
+    position: relative;
+    z-index: 2;
+    margin-top: 55vh;
+    background: none;
     max-width: 90vw;
+    padding: 0 16px;
   }
 }
 
@@ -183,6 +213,9 @@
 </head>
 <body>
   <div class="container">
+    <!-- Add these two divs for the custom background and overlay -->
+    <div class="custom-bg-half"></div>
+    <div class="custom-bg-bottom"></div>
     <div class="overlay"></div>
     <div class="text-content">
       <div class="logo">
