--- a/charity_water_landing_page.html
+++ b/charity_water_landing_page.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Proxima Nova', Arial, sans-serif;
-      background-color: #22507a; /* Use the sampled blue */
+      background-color: #003366; /* Use the sampled blue */
       color: #fff7e1;
     }
 
@@ -98,7 +98,7 @@
   margin-top: 10px;
   display: flex;
   justify-content: flex-end; /* Aligns content to the right */
-  align-items: center;
+  align-items: right;
 }
 
 .cta-bar .cta-button a {
@@ -118,7 +118,7 @@
 }
 
 /* Add or update your existing media query for responsiveness */
-@media (max-width: 1024px) {
+@media (max-width: 1640px) {
   .container {
     position: relative;
     flex-direction: column;
@@ -130,8 +130,8 @@
   .custom-bg-half {
     position: absolute;
     top: 0; left: 0;
-    width: 100%;
-    height: 50vh;
+    width: auto;
+    height: 60%vh;
     background: 
       linear-gradient(to bottom, rgba(0,51,102,0.5), #003366 100%),
       url('Ipad_and_phone_hero.jpg') center top no-repeat;
@@ -168,24 +168,46 @@
     background-position: center;
     min-height: unset;
   }
+   .custom-bg-half {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 50vh;
+    background: 
+      linear-gradient(to bottom, rgba(0,51,102,0.5), #003366 100%),
+      url('Ipad_and_phone_hero.jpg') center top no-repeat;
+    background-size: contain;
+    z-index: 0;
+  }
+  .custom-bg-bottom {
+    position: absolute;
+    top: 50vh; left: 0;
+    width: 100%;
+    height: 50vh;
+    background: #003366;
+    z-index: 0;
+  }
+  .overlay {
+    display: none;
+  }
   .text-content {
     max-width: 100vw;
-    margin-top: 0;
+    margin-top: 60%;
     text-align: left;
   }
   .logo img {
     height: 16px;
   }
   h1 {
-    font-size: 1.5em;
+    font-size: 2.2em;
   }
   .body-text {
-    font-size: 1em;
+    font-size: 0.95em;
     margin-bottom: 32px;
   }
   .cta-bar {
     width: 100%;
-    justify-content: center;
+    justify-content: right;
     margin-top: 16px;
   }
 }
@@ -198,7 +220,7 @@
     height: 12px;
   }
   h1 {
-    font-size: 1.1em;
+    font-size: .7 em;
   }
   .cta-bar {
     padding: 4px 2px;
