--- a/charity_water_landing_page.html
+++ b/charity_water_landing_page.html
@@ -208,6 +208,17 @@
     padding: 8px 12px;
     font-size: 0.95em;
   }
+  .hero-section::after {
+  content: "url('Ipad_and_phone_hero.jpg')";
+  position: absolute;
+  bottom: 0;
+  height: 100px; /* Adjust height of transition zone */
+  width: 100%;
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, #003366 100%);
+  backdrop-filter: blur(4px); /* subtle blur */
+  pointer-events: none;
+  z-index: 0;
+}
 }
   </style>
 </head>
