--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
       display: flex;
       flex-direction: row;
       align-items: right;
-      justify-content: flex-start;
       min-height: 100vh;
       background-image: url('hero.png'); /* Updated to use hero.png */
-      background-size: 80%;
+      background-size: 86%;
       background-position: right;
       background-repeat: no-repeat;
       padding: 60px 40px;
-      box-sizing: border-box;
+      box-sizing: content-box; /*Ensures padding does not effect the behavior of the background image */
     }
 
     .overlay {
